deploy/k8s/web-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: adnsgpg
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
